Fixed profile display alignment issues

--- a/src/app/profile-display/profile-display.component.css
+++ b/src/app/profile-display/profile-display.component.css
@@ -585,6 +585,12 @@
   margin-bottom: 5px;
 }
 
+.viewsSymbol , .holderSymbol {
+  text-align: center;
+}
+
+
+
 .viewCounter , .holderCounter {
   font-family: 'ChampagneAndLimousines';
   font-style: normal;
